--- a/NhamiBackEnd1/NhamiBackEnd1.csproj
+++ b/NhamiBackEnd1/NhamiBackEnd1.csproj
@@ -45,9 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Code\Pacote.cs" />
-    <Compile Include="Code\Server.cs" />
-    <Compile Include="Code\Client.cs" />
+    <Compile Include="Code\Server\Pacote.cs" />
+    <Compile Include="Code\Server\Server.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
