--- a/Nhamalicious/Nhamalicious/NhamaliciousFrontEnd.csproj
+++ b/Nhamalicious/Nhamalicious/NhamaliciousFrontEnd.csproj
@@ -99,6 +99,17 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\edit_text_style.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\anim\slide_up.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\anim\slide_right.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\styles.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
      Other similar extension points exist, see Microsoft.Common.targets.
