--- a/NhamiBackEnd1/NhamiBackEnd1.csproj
+++ b/NhamiBackEnd1/NhamiBackEnd1.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Code\AcessoBD\Class1.cs" />
+    <Compile Include="Code\AcessoBD\Restaurante.cs" />
     <Compile Include="Code\AcessoBD\DAOGestaoUtilizadores.cs" />
     <Compile Include="Code\AcessoBD\DAORestaurante.cs" />
     <Compile Include="Code\AcessoBD\Testar.cs" />
