--- a/NhamiBackEnd1/NhamiBackEnd1.csproj
+++ b/NhamiBackEnd1/NhamiBackEnd1.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Code\AcessoBD\DAOGestaoUtilizadores.cs" />
     <Compile Include="Code\AcessoBD\DAORestaurante.cs" />
     <Compile Include="Code\AcessoBD\Testar.cs" />
+    <Compile Include="Code\Server\Envelope.cs" />
     <Compile Include="Code\Server\Pacotes.cs" />
     <Compile Include="Code\Server\Server.cs" />
     <Compile Include="TurnOn.cs">
