--- a/Nhamalicious/Nhamalicious/NhamaliciousFrontEnd.csproj
+++ b/Nhamalicious/Nhamalicious/NhamaliciousFrontEnd.csproj
@@ -52,13 +52,18 @@
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5.2\System.Windows.Forms.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DialogLoginClass.cs" />
     <Compile Include="MainActivity.cs" />
-    <Compile Include="Resources\Code\cliente.cs" />
+    <Compile Include="Resources\Code\Cliente.cs" />
+    <Compile Include="Resources\Code\Envelope.cs" />
+    <Compile Include="Resources\Code\Pacotes.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
