--- a/NhamiBackEnd1/NhamiBackEnd1.csproj
+++ b/NhamiBackEnd1/NhamiBackEnd1.csproj
@@ -45,7 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Code\SharedClasses\Cliente.cs" />
+    <Compile Include="Code\SharedClasses\Ingrediente.cs" />
     <Compile Include="Code\SharedClasses\Prato.cs" />
+    <Compile Include="Code\SharedClasses\Preferencia.cs" />
+    <Compile Include="Code\SharedClasses\Proprietário.cs" />
     <Compile Include="Code\SharedClasses\Utilizador.cs" />
     <Compile Include="Code\SharedClasses\Restaurante.cs" />
     <Compile Include="Code\AcessoBD\DAOGestaoUtilizadores.cs" />
