Metodos sobre o cliente Falta o fazer registo e o getPropriedades do proprietário

--- a/ClassesPartilhadas/ClassesPartilhadas.csproj
+++ b/ClassesPartilhadas/ClassesPartilhadas.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Classes\Proprietario.cs" />
     <Compile Include="Classes\Restaurante.cs" />
     <Compile Include="Classes\Utilizador.cs" />
+    <Compile Include="Classes\Visita.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
