--- a/Nhamalicious/Nhamalicious/NhamaliciousFrontEnd.csproj
+++ b/Nhamalicious/Nhamalicious/NhamaliciousFrontEnd.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DialogLoginClass.cs" />
+    <Compile Include="DialogRegistoClass.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Code\PedidoCli.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
@@ -72,6 +73,7 @@
     <AndroidResource Include="Resources\layout\DialogLogIn.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\DialogPagRegisto.axml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
