--- a/API_Acesso_BD/API_Acesso_BD.csproj
+++ b/API_Acesso_BD/API_Acesso_BD.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B98215DB-0172-4BFE-81FF-1D100AE85F62}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>NhamiBackEnd1</RootNamespace>
-    <AssemblyName>NhamiBackEnd1</AssemblyName>
+    <ProjectGuid>{3965D1DE-01D2-43CE-88C0-4C63EEBA5969}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>API_Acesso_BD</RootNamespace>
+    <AssemblyName>API_Acesso_BD</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -38,52 +36,18 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Code\Server\Server.cs" />
-    <Compile Include="TurnOn.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TurnOn.Designer.cs">
-      <DependentUpon>TurnOn.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="DAOs\DAOGestaoUtilizadores.cs" />
+    <Compile Include="DAOs\DAOPreferenciasUtilizador.cs" />
+    <Compile Include="DAOs\DAORestaurante.cs" />
+    <Compile Include="DAOs\testar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="TurnOn.resx">
-      <DependentUpon>TurnOn.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\API_Acesso_BD\API_Acesso_BD.csproj">
-      <Project>{3965d1de-01d2-43ce-88c0-4c63eeba5969}</Project>
-      <Name>API_Acesso_BD</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ClassesPartilhadas\ClassesPartilhadas.csproj">
       <Project>{a1e77695-9d11-4f66-9396-cc55ef6dba79}</Project>
       <Name>ClassesPartilhadas</Name>
