--- a/Nhamalicious/Nhamalicious/NhamaliciousFrontEnd.csproj
+++ b/Nhamalicious/Nhamalicious/NhamaliciousFrontEnd.csproj
@@ -124,6 +124,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\pesquisaIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\theme.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
      Other similar extension points exist, see Microsoft.Common.targets.
