--- a/API_Acesso_BD/API_Acesso_BD.csproj
+++ b/API_Acesso_BD/API_Acesso_BD.csproj
@@ -46,12 +46,23 @@
     <Compile Include="DAOs\DAORestaurante.cs" />
     <Compile Include="DAOs\testar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClassesPartilhadas\ClassesPartilhadas.csproj">
       <Project>{a1e77695-9d11-4f66-9396-cc55ef6dba79}</Project>
       <Name>ClassesPartilhadas</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
