--- a/SharedClasses/SharedClasses.csproj
+++ b/SharedClasses/SharedClasses.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3965D1DE-01D2-43CE-88C0-4C63EEBA5969}</ProjectGuid>
+    <ProjectGuid>{95EFB861-A23F-4EC7-85BE-ADE0454C3468}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>API_Acesso_BD</RootNamespace>
-    <AssemblyName>API_Acesso_BD</AssemblyName>
+    <RootNamespace>SharedClasses</RootNamespace>
+    <AssemblyName>SharedClasses</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,29 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
-    <Compile Include="DAOs\DAOGestaoUtilizadores.cs" />
-    <Compile Include="DAOs\DAOPreferenciasUtilizador.cs" />
-    <Compile Include="DAOs\DAORestaurante.cs" />
-    <Compile Include="DAOs\testar.cs" />
+    <Compile Include="AMessage.cs" />
+    <Compile Include="Cliente.cs" />
+    <Compile Include="Ingrediente.cs" />
+    <Compile Include="Pacotes.cs" />
+    <Compile Include="Prato.cs" />
+    <Compile Include="Preferencia.cs" />
+    <Compile Include="Proprietario.cs" />
+    <Compile Include="Restaurante.cs" />
+    <Compile Include="Serializer.cs" />
+    <Compile Include="Utilizador.cs" />
+    <Compile Include="Visita.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SharedClasses\SharedClasses.csproj">
-      <Project>{95efb861-a23f-4ec7-85be-ade0454c3468}</Project>
-      <Name>SharedClasses</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
